<resources>
    <string name="app_name">QR Alarm</string>
    <string name="newAlarmButtonText">New Alarm</string>
    <string name="cancelButtonTextAlarm">Cancel</string>
    <string name="saveButtonTextAlarm">Save</string>
    <string name="toggleTextAlarmSunday">S</string>
    <string name="toggleTextAlarmMonday">M</string>
    <string name="toggleTextAlarmTuesday">T</string>
    <string name="toggleTextAlarmWednesday">W</string>
    <string name="toggleTextAlarmThursday">T</string>
    <string name="toggleTextAlarmFriday">F</string>
    <string name="toggleTextAlarmSaturday">S</string>
    <string name="alarmCheckRepeatWeeklyText">Repeat Weekly</string>
    <string name="alarmRingtoneButtonText">Alarm tone</string>
    <string name="alarmTextLabelHint">Name</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="buttonNewLocation">Set New Location</string>
    <string name="buttonShowLocation">Show Current Set Location</string>
    <string name="textViewLocationDisplay">Location Status Here!</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="alarm_saved">Alarm saved</string>
    <string name="turn_off_alarm">Turn off alarm</string>
</resources>
